--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,9 @@
         html { height: 100vh }
         body { height: 100vh; margin: 0; padding: 0 }
         #map { height: 100vh; weight: 100vh}
+		#map a img { display: none}
+		#map a { display: none}
+		#map span { display: none}
     </style>
 </head>
 
